--- a/docs/yaml/role/rolebinding.yaml
+++ b/docs/yaml/role/rolebinding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: steve-admin
 subjects:
 - kind: User
-  name: steves@heptio.com
+  name: wayne@sonaticket.com
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole #this must be Role or ClusterRole
