--- a/docs/yaml/role/rolebinding.yaml
+++ b/docs/yaml/role/rolebinding.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: steve-admin
+  name: wayne-admin
 subjects:
 - kind: User
   name: wayne@sonaticket.com
